# rediminute

./: .gitignore  README.md  plan_en.md  pyproject.toml  requirements.txt  style.md  todo.md
rediminute/: __init__.py  __main__.py  client.py  models.py  server.py
rediminute/tests/: __init__.py  test_echo_server.py
