[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rediminute"
version = "0.1.0"
description = "A Redis-inspired asynchronous TCP server"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Fernando Rodríguez"},
]
dependencies = [
    "asyncio>=3.4.3",
    "uvloop>=0.16.0",
    "orjson>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-benchmark>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["rediminute"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"] 