[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rediminute"
version = "0.1.0"
description = "A Redis-inspired asynchronous TCP server"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Fernando Rodríguez"},
]
dependencies = [
    "asyncio>=3.4.3",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.400",
]

[tool.hatch.build.targets.wheel]
packages = ["rediminute"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ARG", # unused arguments
    "W",   # pycodestyle warnings
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["rediminute"]

[tool.pyright]
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.8" 
